# takumi-markdown

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.lib.json  vite.config.cli.ts  vite.config.lib.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
assets/: comparison_mockup.html  index-DGo-Sa3R.js  index-sS7XzGU7.css
crates/takumi-core/: Cargo.toml
crates/takumi-core/src/: ast.rs  lib.rs  parse.rs  ruby.rs  typography.rs  unicode.rs
crates/takumi-layout/: Cargo.toml
crates/takumi-layout/src/: layout.rs  lib.rs  measure.rs  tree.rs
crates/takumi-metal/: Cargo.toml
crates/takumi-metal/src/: app.rs  main.rs  renderer.rs  text.rs
crates/takumi-wasm/: Cargo.toml
crates/takumi-wasm/src/: lib.rs
docs/: terminal-rendering-research.md
extension/: README.md  package.json
extension/styles/: beautiful-markdown.css
scripts/: add-shebang.mjs  assert-css.mjs  copy-styles.js  ssr-smoke.cjs  ssr-smoke.mjs
src/: App.css  App.tsx  index.css  main.tsx
src/cli/: ansi.ts  highlight.ts  index.ts  render.ts  width.ts
src/components/: MarkdownRenderer.tsx
src/lib/: index.ts  styles.css
src/plugins/: rehypeHighlightCustom.ts  remarkRuby.ts
src/styles/: typography.css
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.ts  react.ts  renderer.ts  styles.css  types.ts
