[workspace]
members = [
    "crates/takumi-core",
    "crates/takumi-layout",
    "crates/takumi-wasm",
    "crates/takumi-metal",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
