[package]
name = "takumi-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layout engine with kinsoku line-breaking and vertical rhythm for Takumi"

[dependencies]
takumi-core = { path = "../takumi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
