[package]
name = "takumi-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Takumi Markdown renderer"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
takumi-core = { path = "../takumi-core" }
takumi-layout = { path = "../takumi-layout" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
